--- a/app/views/knowledge_base/_menu_tree.html.erb
+++ b/app/views/knowledge_base/_menu_tree.html.erb
@@ -1,17 +1,25 @@
-<ul>
+<ul class="indent-<%= locals[:indent] %>">
   <% locals[:tree].each do |item| %>
     <% if item === 'separator' %>
       <li class="separator"></li>
     <% else %>
-      <li class="<%= 'current' if path_matches?(item[:path], @current_path) %>">
-        <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
+      <li class="<%= 'current' if path_matches?(item[:path], @current_path) %> <%= 'has-children' if item[:children].present? %>">
         <% if item[:children].present? %>
           <%= check_box_tag "menu-toggle-#{item[:path].parameterize}", 'a', path_matches?(item[:path], @current_path) %>
-          <label for="menu-toggle-<%= item[:path].parameterize %>">
-            <%= inline_svg_tag 'plus.svg', class: 'open' %>
-            <%= inline_svg_tag 'minus.svg', class: 'close' %>
-          </label>
-          <%= menu_tree(item[:children], item[:path]) %>
+        <% end %>
+        <div class="item-container">
+          <% if item[:children].present? %>
+            <label for="menu-toggle-<%= item[:path].parameterize %>">
+              <%= inline_svg_tag 'caret-right.svg', class: 'open' %>
+              <%= inline_svg_tag 'caret-down.svg', class: 'close' %>
+            </label>
+          <% else %>
+            <%= inline_svg_tag 'page.svg', class: 'page' %>
+          <% end %>
+          <%= link_to item[:title], item[:path], class: path_matches?(item[:path], @current_path, complete_match: true) ? 'current' : '' %>
+        </div>
+        <% if item[:children].present? %>
+          <%= menu_tree(item[:children], item[:path], locals[:indent] + 1) %>
         <% end %>
       </li>
     <% end %>
