--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -1,34 +1,42 @@
 @import "@/breakpoints";
 
+// TODO: change this to :root
+body {
+  --typography-text-color: var(--color-black);
+  --typography-link-color: var(--color-indigo);
+  --typography-highlight-color: var(--color-spice);
+
+  &.supports-dark-mode {
+    @media (prefers-color-scheme: dark) {
+      --typography-text-color: var(--color-crystal);
+      --typography-link-color: var(--color-spice);
+      --typography-highlight-color: var(--color-indigo);
+    }
+  }
+}
+
 body {
   font-family: source-code-pro, monospace;
   font-size: 16px;
   font-weight: 400;
   font-style: normal;
-  color: $black;
+  color: var(--typography-text-color);
 }
 
 a,
 .link {
   text-decoration: none;
-  color: $indigo;
+  color: var(--typography-link-color);
   font-weight: bold;
   cursor: pointer;
+  opacity: 0.9;
 
   &:hover {
-    color: lighten($indigo, 15%);
+    opacity: 1;
   }
 
   &.big {
     font-size: 18px;
-  }
-
-  .dark & {
-    color: $spice;
-
-    &:hover {
-      color: lighten($spice, 15%);
-    }
   }
 }
 
@@ -131,5 +139,5 @@ ol {
 }
 
 strong {
-  color: $spice;
+  color: var(--typography-highlight-color);
 }
