--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
   </head>
 
-  <body class="<%= controller_name %> <%= action_name %> layout-<%= current_layout %>">
+  <body class="<%= controller_name %> <%= action_name %> layout-<%= current_layout %> <%= 'supports-dark-mode' if flag_enabled? :dark_mode %>">
     <%= content_for?(:content) ? yield(:content) : yield %>
   </body>
 
