--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -30,10 +30,14 @@ body.modders {
       .city {
         display: flex;
         align-items: center;
-        color: $spice;
+        color: var(--typography-highlight-color);
         margin-top: 4px;
         gap: 12px;
         font-weight: 500;
+
+        @media (prefers-color-scheme: dark) {
+          color: var(--typography-text-color);
+        }
 
         svg {
           flex: none;
