--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -1,4 +1,4 @@
-@import "./colors";
+@import "@/dark";
 
 .button {
   appearance: none;
@@ -14,58 +14,91 @@
   letter-spacing: 1px;
   padding: 0 24px;
   margin: 0;
-  background-color: $indigo;
+  background-color: var(--color-indigo);
   border-radius: 48px;
-  color: $white;
+  color: var(--color-white);
   cursor: pointer;
   white-space: nowrap;
 
+  @include dark {
+    color: var(--color-white);
+    background-color: var(--color-spice);
+  }
+
   &:hover {
-    color: #fff;
-    background-color: lighten($indigo, 10%);
-    box-shadow: 0 8px 8px -12px $black;
+    color: var(--color-white);
+    background-color: var(--color-indigo-light);
+    box-shadow: 0 8px 8px -12px var(--color-black);
+
+    @include dark {
+      color: var(--color-white);
+      background-color: var(--color-spice-light);
+    }
   }
 
   &:active {
-    background-color: darken($indigo, 10%);
-    box-shadow: inset 0 2px 10px -6px $black;
+    background-color: var(--color-indigo-dark);
+    box-shadow: inset 0 2px 10px -6px var(--color-black);
+
+    @include dark {
+      color: var(--color-white);
+      background-color: var(--color-spice-dark);
+    }
   }
 
   &:disabled {
-    background-color: $platinum;
+    background-color: var(--color-platinum);
     cursor: not-allowed;
   }
 
   &.secondary {
-    color: $indigo;
+    color: var(--color-indigo);
     background-color: transparent;
-    box-shadow: inset 0 0 0 2px $indigo;
+    box-shadow: inset 0 0 0 2px var(--color-indigo);
+
+    @include dark {
+      color: var(--color-spice);
+      background-color: transparent;
+      box-shadow: inset 0 0 0 2px var(--color-spice);
+    }
 
     &:hover {
-      background-color: #fff;
-      box-shadow: inset 0 0 0 2px $indigo, 0 8px 8px -12px $black;
+      background-color: var(--color-white);
+      box-shadow: inset 0 0 0 2px var(--color-indigo),
+        0 8px 8px -12px var(--color-black);
+
+      @include dark {
+        background-color: var(--color-panasonic);
+      }
     }
 
     &:active {
-      background-color: $crystal;
-      box-shadow: inset 0 0 0 2px $indigo, inset 0 2px 10px -6px $black;
+      background-color: var(--color-crystal);
+      box-shadow: inset 0 0 0 2px var(--color-indigo),
+        inset 0 2px 10px -6px var(--color-black);
+
+      @include dark {
+        background-color: var(--color-ink);
+      }
     }
   }
 
   .dark & {
     &.secondary {
-      color: $spice;
+      color: var(--color-spice);
       background-color: transparent;
-      box-shadow: inset 0 0 0 2px $spice;
+      box-shadow: inset 0 0 0 2px var(--color-spice);
 
       &:hover {
         background-color: rgba(#fff, 10%);
-        box-shadow: inset 0 0 0 2px $spice, 0 8px 8px -12px $black;
+        box-shadow: inset 0 0 0 2px var(--color-spice),
+          0 8px 8px -12px var(--color-black);
       }
 
       &:active {
         background-color: #111;
-        box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+        box-shadow: inset 0 0 0 2px var(--color-spice),
+          inset 0 2px 10px -6px var(--color-black);
       }
     }
   }
