--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -7,6 +7,15 @@
   </div>
 </div>
 
+<div class="intro dark" style="background-image:url(<%= image_path 'index-bg-dark.jpg' %>)">
+  <div class="content grid">
+    <section class="span-8">
+      <h1>A directory of GameCube controller modders and artists</h1>
+      <p class="big">Find your next controller, shell or button set, or connect with modders who can help with repairs or upgrades. <a href="/about">About DOL-003.info</a>
+    </section>
+  </div>
+</div>
+
 <div class="content grid">
 
   <section class="span-8">
