--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -139,6 +139,6 @@ strong {
   color: var(--color-spice);
 
   @include dark {
-    color: var(--color-indigo);
+    color: var(--color-indigo-light);
   }
 }
