text input dark styling

--- a/app/frontend/colors.scss
+++ b/app/frontend/colors.scss
@@ -3,6 +3,7 @@ $pearl: #faf9f7;
 $crystal: #eeedea;
 $black: #211f21;
 $ink: #141314;
+$smoke: #383638;
 $platinum: #b8bfbf;
 $panasonic: #6d6b6b;
 $indigo: #444f9a;
@@ -20,6 +21,7 @@ $emerald: #0d8b98;
   --color-crystal: #{$crystal};
   --color-black: #{$black};
   --color-ink: #{$ink};
+  --color-smoke: #{$smoke};
   --color-platinum: #{$platinum};
   --color-panasonic: #{$panasonic};
   --color-indigo: #{$indigo};
