--- a/app/frontend/form.scss
+++ b/app/frontend/form.scss
@@ -60,6 +60,10 @@
     margin-bottom: 4px;
     color: $panasonic;
 
+    @include dark {
+      color: $platinum;
+    }
+
     &.large {
       font-size: 16px;
       margin-bottom: 16px;
