--- a/app/frontend/service-pill.scss
+++ b/app/frontend/service-pill.scss
@@ -45,7 +45,7 @@
 
     @include dark {
       color: var(--service-color-dark, $platinum) !important;
-      background-color: rgba(#fff, 10%);
+      background-color: var(--color-smoke);
       box-shadow: inset 0 0 0 2px var(--service-color-dark, $platinum),
         0 8px 8px -12px $black;
     }
