--- a/app/frontend/text-input.scss
+++ b/app/frontend/text-input.scss
@@ -1,5 +1,6 @@
 @import "@/breakpoints";
 @import "@/colors";
+@import "@/dark";
 
 .text-input {
   appearance: none;
@@ -10,8 +11,14 @@
   border-radius: 8px;
   outline: 0;
   display: block;
-  background-color: #fff;
+  background-color: var(--color-white);
   max-width: 100%;
+
+  @include dark {
+    background-color: var(--color-smoke);
+    box-shadow: inset 0 0 0 2px var(--color-panasonic);
+    color: var(--color-crystal);
+  }
 
   &.search {
     border-radius: 48px;
@@ -44,10 +51,21 @@
 
   &:hover {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
+
+    @include dark {
+      box-shadow: inset 0 0 0 2px var(--color-platinum),
+        0 8px 8px -12px var(--color-ink);
+    }
   }
 
   &:focus {
     box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+
+    @include dark {
+      background-color: var(--color-black);
+      box-shadow: inset 0 0 0 2px var(--color-spice),
+        inset 0 2px 10px -6px var(--color-ink);
+    }
   }
 
   &:disabled {
@@ -59,5 +77,9 @@
 
   &::placeholder {
     color: $platinum;
+
+    @include dark {
+      color: $panasonic;
+    }
   }
 }
