--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -11,7 +11,7 @@
       <%=
         react_component "ServiceSelector", {
           field_name: 'services',
-          all_services: ModderService.enabled_services.map { |slug, service| { value: slug, label: service[:name], color: service[:color], solid: service[:solid].present? } },
+          all_services: ModderService.enabled_services.map { |slug, service| { value: slug, label: service[:name], color: service[:color], color_dark: service[:color_dark] || service[:color], solid: service[:solid].present? } },
           selected_services: @services.map { |slug|
             service = ModderService::ALL_SERVICES[slug.to_sym]
             next if service.blank?
@@ -19,6 +19,7 @@
               value: slug,
               label: service[:name],
               color: service[:color],
+              color_dark: service[:color_dark],
               solid: service[:solid].present?
             }
           },
@@ -118,7 +119,7 @@
           <ol>
             <% modder.modder_services.map do |service| %>
               <% svc = ModderService::ALL_SERVICES[service.service.to_sym] %>
-              <li class="service-pill<%= ' solid' if svc[:solid] %>" style="--service-color: <%= svc[:color] %>"><%= svc[:name] %></li>
+              <li class="service-pill<%= ' solid' if svc[:solid] %>" style="--service-color: <%= svc[:color] %>; --service-color-dark: <%= svc[:color_dark] || svc[:color] %>;"><%= svc[:name] %></li>
             <% end %>
           </ol>
         </div>
