--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -68,7 +68,7 @@
         0 8px 8px -12px var(--color-black);
 
       @include dark {
-        background-color: var(--color-panasonic);
+        background-color: var(--color-smoke);
       }
     }
 
