--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -96,7 +96,9 @@ body.modders.index {
     @include dark {
       background-color: var(--color-smoke);
 
-      .text-input {
+      .text-input,
+      .ServiceSelector .service-selector__control,
+      .ServiceSelector .service-selector__menu {
         background-color: var(--color-black);
       }
     }
