--- a/app/frontend/text-input.scss
+++ b/app/frontend/text-input.scss
@@ -49,7 +49,7 @@
     width: 100%;
   }
 
-  &:hover {
+  &:hover:not(:disabled) {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
 
     @include dark {
@@ -73,6 +73,11 @@
     box-shadow: inset 0 0 0 2px $platinum;
     color: $panasonic;
     cursor: not-allowed;
+
+    @include dark {
+      background-color: var(--color-panasonic);
+      color: var(--color-platinum);
+    }
   }
 
   &::placeholder {
