--- a/app/frontend/text-input.scss
+++ b/app/frontend/text-input.scss
@@ -64,7 +64,7 @@
     @include dark {
       background-color: var(--color-black);
       box-shadow: inset 0 0 0 2px var(--color-spice),
-        inset 0 2px 10px -6px var(--color-ink);
+        inset 0 2px 10px -6px var(--color-ink) !important;
     }
   }
 
