--- a/app/frontend/textarea.scss
+++ b/app/frontend/textarea.scss
@@ -6,16 +6,33 @@
   border-radius: 8px;
   outline: 0;
   display: block;
-  background-color: #fff;
+  background-color: var(--color-white);
   width: 100%;
   line-height: 1.5;
 
-  &:hover {
+  @include dark {
+    background-color: var(--color-smoke);
+    box-shadow: inset 0 0 0 2px $panasonic;
+    color: var(--color-crystal);
+  }
+
+  &:hover:not(:disabled) {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
+
+    @include dark {
+      box-shadow: inset 0 0 0 2px var(--color-platinum),
+        0 8px 8px -12px var(--color-ink);
+    }
   }
 
   &:focus {
     box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+
+    @include dark {
+      background-color: var(--color-black);
+      box-shadow: inset 0 0 0 2px var(--color-spice),
+        inset 0 2px 10px -6px var(--color-ink) !important;
+    }
   }
 
   &.height-medium {
