--- a/app/frontend/select-input.scss
+++ b/app/frontend/select-input.scss
@@ -1,4 +1,5 @@
 @import "@/colors";
+@import "@/dark";
 
 .select-input-container {
   position: relative;
@@ -8,7 +9,7 @@
     content: "";
     width: 10px;
     height: 6px;
-    background-color: $platinum;
+    background-color: var(--color-platinum);
     clip-path: polygon(100% 0%, 0 0%, 50% 100%);
     position: absolute;
     top: 21px;
@@ -24,22 +25,39 @@
 .select-input {
   appearance: none;
   border: 0;
-  box-shadow: inset 0 0 0 2px $platinum;
+  box-shadow: inset 0 0 0 2px var(--color-platinum);
   height: 48px;
   padding: 0 40px 1px 16px;
   border-radius: 8px;
   outline: 0;
   display: block;
-  background-color: #fff;
+  background-color: var(--color-white);
   max-width: 100%;
   cursor: pointer;
 
-  &:hover {
+  @include dark {
+    background-color: var(--color-smoke);
+    box-shadow: inset 0 0 0 2px var(--color-panasonic);
+    color: var(--color-crystal);
+  }
+
+  &:hover:not(:disabled) {
     box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
+
+    @include dark {
+      box-shadow: inset 0 0 0 2px var(--color-platinum),
+        0 8px 8px -12px var(--color-ink);
+    }
   }
 
   &:focus,
   &:active {
     box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+
+    @include dark {
+      background-color: var(--color-black);
+      box-shadow: inset 0 0 0 2px var(--color-spice),
+        inset 0 2px 10px -6px var(--color-ink) !important;
+    }
   }
 }
