--- a/app/frontend/textarea.scss
+++ b/app/frontend/textarea.scss
@@ -12,7 +12,7 @@
 
   @include dark {
     background-color: var(--color-smoke);
-    box-shadow: inset 0 0 0 2px $panasonic;
+    box-shadow: inset 0 0 0 2px var(--color-panasonic);
     color: var(--color-crystal);
   }
 
