--- a/app/frontend/select-input.scss
+++ b/app/frontend/select-input.scss
@@ -42,7 +42,7 @@
   }
 
   &:hover:not(:disabled) {
-    box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black;
+    box-shadow: inset 0 0 0 2px darken($platinum, 20%), 0 8px 8px -12px $black !important;
 
     @include dark {
       box-shadow: inset 0 0 0 2px var(--color-platinum),
