--- a/app/frontend/textarea.scss
+++ b/app/frontend/textarea.scss
@@ -26,7 +26,7 @@
   }
 
   &:focus {
-    box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black;
+    box-shadow: inset 0 0 0 2px $spice, inset 0 2px 10px -6px $black !important;
 
     @include dark {
       background-color: var(--color-black);
