--- a/app/frontend/components/PhotoManager.scss
+++ b/app/frontend/components/PhotoManager.scss
@@ -1,4 +1,5 @@
 @import "@/colors";
+@import "@/dark";
 
 .react-container-PhotoManager {
   width: 100%;
@@ -17,6 +18,10 @@
     bottom: 0;
     left: 0;
     z-index: 10000;
+
+    @include dark {
+      background-color: rgba($smoke, 90%);
+    }
   }
 
   > .manager {
