--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -81,6 +81,7 @@
     <div class="span-4 caption">
       <p class="label large">Tags</p>
       <p class="small">Select the services and/or parts you’re currently offering. This will be displayed on your profile and used to filter search results. You can update this as often as needed to reflect your current offerings.</p>
+      <p class="small">Only specify things here that you offer separately. For instance, do not list resin buttons if you only sell resin buttons as part of a full build.</p>
     </div>
 
     <div class="span-8 input-container">
