--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -47,6 +47,29 @@ body.modders {
           position: relative;
           top: -1px;
         }
+
+        .vetted {
+          margin-left: 8px;
+          display: flex;
+          align-items: center;
+          padding: 0 12px;
+          height: 24px;
+          font-size: 12px;
+          text-transform: uppercase;
+          font-weight: bold;
+          letter-spacing: 1px;
+          line-height: 1;
+          background-color: var(--color-indigo);
+          color: var(--color-white);
+          border-radius: 24px;
+
+          svg {
+            top: 0;
+            width: 12px;
+            height: 12px;
+            margin: 0 6px 0 -2px;
+          }
+        }
       }
 
       > div {
