--- a/app/frontend/typography.scss
+++ b/app/frontend/typography.scss
@@ -125,12 +125,13 @@ p {
   }
 }
 
+ul,
 ol {
   li {
     line-height: 1.5;
 
     & + li {
-      margin-top: 0.5em;
+      margin-top: 0.2em;
     }
   }
 }
