--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -32,7 +32,12 @@
       </figure>
       <div>
         <h1><%= @modder.name %></h1>
-        <p class="city"><%= inline_svg_tag 'pin.svg' %><%= @modder.city %></p>
+        <p class="city">
+          <%= inline_svg_tag 'pin.svg' %><%= @modder.city %>
+          <% if @modder.vetted? %>
+            <%= link_to vetting_path, class: 'vetted', title: 'This modder has been vetted by an administrator. Click for more information.' do %><%= inline_svg_tag 'check.svg' %>Vetted<% end %>
+          <% end %>
+        </p>
         <%= format_bio(@modder.bio) %>
       </div>
     </div>
