--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -59,9 +59,13 @@ body.modders {
           font-weight: bold;
           letter-spacing: 1px;
           line-height: 1;
-          background-color: var(--color-indigo);
+          background-color: var(--color-spice);
           color: var(--color-white);
           border-radius: 24px;
+
+          @include dark {
+            background-color: var(--color-indigo);
+          }
 
           svg {
             top: 0;
